--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 data_set/*
 *.csv
 *.jpg
+LectureSrcAndNoteBook/MLaug22/ML2022-09-Deep learning II/data/*
+LectureSrcAndNoteBook/Python-for-Data-Science/*
+
