--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ data_set/*
 LectureSrcAndNoteBook/MLaug22/ML2022-09-Deep learning II/data/*
 LectureSrcAndNoteBook/Python-for-Data-Science/*
 *.pt
+ProjectAug22/*
